tests/jtrrouter/errors/false_output/options.jtrrouter
--net-file=input_net.net.xml --route-files=input_flows.flows.xml -o output/routes.rou.xml
